Fix spacing of pricing items

--- a/src/styles/components/_pricing-card.scss
+++ b/src/styles/components/_pricing-card.scss
@@ -67,7 +67,7 @@
   }
 
   &__list-item {
-    margin-bottom: 32px;
+    margin-bottom: 16px;
     display: flex;
     gap: 16px;
 
